<resources>
    <string name="app_name">OmniTestApplication</string>
    <string name="action_settings">Settings</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="orientation_header">Leviton Screen Orientation Test</string>
    <string name="audio_record_header">Leviton Audio Record/Playback Test</string>
    <string name="color_header">Leviton Color Test</string>
    <string name="end_of_test">End of Test!</string>
    <string name="turn_leds_on">Turn LEDs On</string>
    <string name="turn_leds_off">Turn LEDs Off</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="start_playing">Start Playing</string>
    <string name="exit">Exit</string>
</resources>
