<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#47629C"
    android:gravity="center">

    <Button
        android:id="@+id/button_audio_test"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/audio_record_header" />
    <Button
        android:id="@+id/button_orientation_test"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/orientation_header" />
    <Button
        android:id="@+id/button_color_test"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/color_header" />
    <Button
        android:id="@+id/button_led_test"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/turn_leds_on" />
    <Button
        android:id="@+id/button_exit"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/exit" />

</LinearLayout>