<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#47629C"
    android:columnCount="2"
    android:rowCount="2"
    android:fitsSystemWindows="true"
    tools:context="com.leviton.omnitestapplication.OrientationTest" >

    <Button
        android:id="@+id/button_audio_test"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="150dp"
        android:text="@string/A" />

    <Button
        android:id="@+id/button_orientation_test"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_audio_test"
        android:layout_alignBottom="@+id/button_audio_test"
        android:layout_alignParentRight="true"
        android:layout_marginRight="200dp"
        android:text="@string/B" />

    <Button
        android:id="@+id/button_color_test"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button_audio_test"
        android:layout_below="@+id/button_audio_test"
        android:layout_marginTop="150dp"
        android:text="@string/C" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_color_test"
        android:layout_alignBottom="@+id/button_color_test"
        android:layout_alignRight="@+id/button_orientation_test"
        android:text="@string/D" />
	        
    <TextView
        android:id="@+id/leviton_text"
        android:layout_width="match_parent"
   		android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/orientation_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/orientation_header"
        android:textColor="@color/Black"
        android:textSize="50sp"
        android:textStyle="bold" />

</RelativeLayout>